# llmchat

./: README.md  biome.json  bun.lockb  index.html  package-lock.json  package.json  postcss.config.cjs  tsconfig.json  vite.config.ts
cf-worker/: bun.lockb  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.toml
cf-worker/src/: claude.ts  gemini.ts  package-lock.json  package.json  utlis.ts  worker.js  worker.ts  wrangler.toml
src/: App.tsx  main.tsx  store.ts  styles.css  worker.ts  workerInstance.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: lib.rs  main.rs
src/assets/: HamburgerMenuIcon.tsx  XIcon.tsx  gpt.tsx  testMsg.txt
src/atom/: atoms.ts  derivedAtoms.ts
src/components/: ChatInput.tsx  FileItem.tsx  GoogleSSO.tsx  MessageArea.css  MessageArea.module.css  MessageArea.tsx  Settings.tsx  TestMarkdown.tsx
src/components/chat/: ChatMessage.css  ChatMessage.module.css  ChatMessage.tsx
src/components/nav/: Nav.module.css  Nav.tsx  NavItem.tsx  SettingsButton.tsx
src/components/services/: openai.ts
src/components/services/storage/: storage.ts
src/components/settings/: Settings.module.css  Settings.tsx
src/hooks/: useMobile.ts
src/services/: claude.ts  compression.ts  crypto.ts  gemini.ts  googleApi.ts  indexedDb.ts  mergeThreads.ts  openai.ts  platform.ts  threadStorage.ts
src/types/: AppState.ts  LlmTypes.ts  Message.ts  User.ts  Worker.ts
src/utils/: crypto.ts
