[package]
name = "llmchat"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "llmchat_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.12", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.15", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-store = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
